--- a/index.html
+++ b/index.html
@@ -1,10 +1,30 @@
 <!doctype html>
 <html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Manul testing</title>
+
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <meta name="viewport" content="width=device-width">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
   <body>
     <div class="wrapper">
+      <header>
+        <h1>Direct-metr-tag</h1>
+        <p>Тестовый сайт для манулов</p>
+
+        <p class="view"><a href="https://github.yandex-team.ru/sonick/direct-metr-tag">View the Project on GitHub <small>sonick/direct-metr-tag</small></a></p>
+
+
+      </header>
       <section>
         <h2>
-<a id="manul-testing" class="anchor" href="#manul-testing" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Manul testing</h2>
+<a id="manul-testing" class="anchor" href="#manul-testing" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Look at me</h2>
 <p><em>Here you can find 51709736 tag</em></p>
         <!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
@@ -22,7 +42,7 @@
 <!-- /Yandex.Metrika counter -->
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://github.yandex-team.ru/sonick">sonick</a></p>
+        <p>This project is maintained by <a href="https://github.com/helenii">sonick</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
