--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+    <script src="scale.fix.js"></script>
     
   </body>
 </html>
