--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <section>
         <h2>
 <a id="manul-testing" class="anchor" href="#manul-testing" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Look at me</h2>
-<p><em>Here you can find 51709736 tag</em></p>
+<p><em>Here you can find 51709736, 80567668, 80567692, 80567878 tags</em></p>
         <!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
@@ -40,6 +40,52 @@
 </script>
 <noscript><div><img src="https://mc.yandex.ru/watch/51709736" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
+
+          <!-- Yandex.Metrika counter Счетчик без целей -->
+          <script type="text/javascript" >
+              (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+                  m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+              (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+              ym(80567668, "init", {
+                  clickmap:true,
+                  trackLinks:true,
+                  accurateTrackBounce:true
+              });
+          </script>
+          <noscript><div><img src="https://mc.yandex.ru/watch/80567668" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+          <!-- /Yandex.Metrika counter -->
+
+          <!-- Yandex.Metrika counter Тестовый счетчик 1 -->
+          <script type="text/javascript" >
+              (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+                  m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+              (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+              ym(80567692, "init", {
+                  clickmap:true,
+                  trackLinks:true,
+                  accurateTrackBounce:true
+              });
+          </script>
+          <noscript><div><img src="https://mc.yandex.ru/watch/80567692" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+          <!-- /Yandex.Metrika counter -->
+
+          <!-- Yandex.Metrika counter Тестовый счетчик 2 -->
+          <script type="text/javascript" >
+              (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+                  m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+              (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+              ym(80567878, "init", {
+                  clickmap:true,
+                  trackLinks:true,
+                  accurateTrackBounce:true
+              });
+          </script>
+          <noscript><div><img src="https://mc.yandex.ru/watch/80567878" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+          <!-- /Yandex.Metrika counter -->
+
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/helenii">sonick</a></p>
@@ -47,6 +93,6 @@
       </footer>
     </div>
     <script src="scale.fix.js"></script>
-    
+
   </body>
 </html>
