--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <section>
         <h2>
 <a id="manul-testing" class="anchor" href="#manul-testing" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Look at me</h2>
-<p><em>Here you can find 51709736, 80567668, 80567692, 80567878, 83601895 tags</em></p>
+<p><em>Here you can find 51709736, 80567668, 80567692, 80567878, 83601895, 85783926 tags</em></p>
         <!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
@@ -100,6 +100,22 @@
           </script>
           <noscript><div><img src="https://mc.yandex.ru/watch/83601895" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
           <!-- /Yandex.Metrika counter -->
+        
+          <!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+   ym(85783926, "init", {
+        clickmap:true,
+        trackLinks:true,
+        accurateTrackBounce:true
+   });
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/85783926" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
+        
 
       </section>
       <footer>
