--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
    ym(85783926, "init", {
         clickmap:true,
         trackLinks:true,
-        accurateTrackBounce:true
+        accurateTrackBounce:true,
+        ecommerce:"dataLayer"
    });
 </script>
 <noscript><div><img src="https://mc.yandex.ru/watch/85783926" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
